--- a/components/tutorial-detail.html
+++ b/components/tutorial-detail.html
@@ -47,27 +47,7 @@
 
       <div class="col-lg-4">
         <div class="md-details service-info">
-          <!--<h4>Detalles del Tutorial</h4>
-          <div class="info-item">
-            <i class="bi bi-clock"></i>
-            <h5>Tiempo estimado</h5>
-            <p>30-45 minutos</p>
-          </div>
-          <div class="info-item">
-            <i class="bi bi-hdd-stack"></i>
-            <h5>Requisitos</h5>
-            <p>Proxmox con LXC, Debian 12, acceso root</p>
-          </div>
-          <div class="info-item">
-            <i class="bi bi-terminal"></i>
-            <h5>Nivel</h5>
-            <p>Intermedio / Avanzado</p>
-          </div>
-          <div class="info-item">
-            <i class="bi bi-code-slash"></i>
-            <h5>Lenguajes involucrados</h5>
-            <p>Bash, PHP, configuración de Nginx</p>
-          </div>-->
+          <!-- El contenido del md-details se cargará aquí -->
         </div>
         <div class="md-related">
           <!-- El contenido del md-related se cargará aquí -->
