--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -80,10 +80,10 @@ body.light-mode {
 }
 
 /* Color Presets */
-.light-background {
-  --background-color: var(--section-alt-bg);
-  --surface-color: var(--section-alt-surface);
-}
+//.light-background {
+//  --background-color: var(--section-alt-bg);
+//  --surface-color: var(--section-alt-surface);
+//}
 
 .dark-background {
   --background-color: #040b14;
