--- a/components/proyectos-index.html
+++ b/components/proyectos-index.html
@@ -46,7 +46,7 @@
                           <div class="portfolio-links">
                             <a href="assets/img/portfolio/portfolio-portrait-1.webp" class="glightbox"
                               title="Capturing Moments"><i class="bi bi-plus-lg"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
+                            <a href="proyecto.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
                           </div>
                         </div>
                       </div>
