--- a/components/header.html
+++ b/components/header.html
@@ -8,14 +8,14 @@
           <li><a href="/"><i class="bi bi-house navicon"></i>Inicio</a></li>
 
           <li class="dropdown" data-id="tutoriales">
-            <a href="#"><i class="bi bi-hdd-stack navicon"></i>Tutoriales
+            <a href="/tutoriales.html"><i class="bi bi-hdd-stack navicon"></i>Tutoriales
               <i class="bi bi-chevron-down toggle-dropdown"></i>
             </a>
             <ul class="dropdown-menu">
             </ul>
           </li>
           <li class="dropdown" data-id="proyectos">
-            <a href="#"><i class="bi bi-server navicon"></i>Proyectos<i
+            <a href="/portfolio.html"><i class="bi bi-server navicon"></i>Proyectos<i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul class="dropdown-menu">
             </ul>
